--- a/index.html
+++ b/index.html
@@ -99,10 +99,14 @@
         <div class="container">
             <footer class="pt-3 mt-4">
                 <ul class="nav justify-content-center  pb-3 mb-3">
-                    <li class="nav-item"><a href="#" class="nav-link pt-2 text-body-secondary">Linkedin</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link pt-2 text-body-secondary">Github</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link pt-2 text-body-secondary">Gmail</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link pt-2 text-body-secondary">Portfolio</a></li>
+                    <li class="nav-item"><a href="https://www.linkedin.com/in/abdulafeel/"
+                            class="nav-link pt-2 text-body-secondary" target="_blank">Linkedin</a></li>
+                    <li class="nav-item"><a href="https://github.com/abdulafeel"
+                            class="nav-link pt-2 text-body-secondary" target="_blank">Github</a></li>
+                    <li class="nav-item"><a href="mailto:abdulafeel2@gmail.com"
+                            class="nav-link pt-2 text-body-secondary" target="_blank">Gmail</a></li>
+                    <li class="nav-item"><a href="https://abdulafeel.github.io/portfolio/"
+                            class="nav-link pt-2 text-body-secondary" target="_blank">Portfolio</a></li>
                 </ul>
                 <p class="text-center text-body-secondary copyright">© 2023 Abdul Afeel</p>
             </footer>
